use the /openapi_spec.json to check for open api changes

--- a/.github/workflows/pr-convention-checks.yml
+++ b/.github/workflows/pr-convention-checks.yml
@@ -149,7 +149,7 @@ jobs:
             migration_and_schema_changes='true'
           fi
 
-          if echo $files_changed | grep --quiet --extended-regexp '(openapi/src/openapi.rs)'; then
+          if echo $files_changed | grep --quiet --extended-regexp '(api-reference/openapi_spec.json)'; then
             openapi_changes='true'
           fi
 
