--- a/config/development.toml
+++ b/config/development.toml
@@ -11,6 +11,9 @@ traces_enabled = false
 metrics_enabled = false
 use_xray_generator = false
 
+[key_manager]
+url = "http://localhost:5000"
+
 # TODO: Update database credentials before running application
 [master_database]
 username = "db_user"
